initialized test suite with one working test - test/models/oppties.yml - others are unconfirmed

--- a/test/fixtures/allocated_tasks.yml
+++ b/test/fixtures/allocated_tasks.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  id: MyString
-  comment: MyText
+  title: tasks1
+  id: 888
+  comment: truth
 
 two:
-  title: MyString
-  id: MyString
-  comment: MyText
+  title: tasks2
+  id: 889
+  comment: fiction
