--- a/test/fixtures/histories.yml
+++ b/test/fixtures/histories.yml
@@ -1,13 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  opptyName: MyString
-  opptyId: MyString
-  oppty_id: 
-  user_id: 
+  opptyName: hist1
+  opptyId: 11223344
 
 two:
-  opptyName: MyString
-  opptyId: MyString
-  oppty_id: 
-  user_id: 
+  opptyName: hist2
+  opptyId: 4455666677
