--- a/test/fixtures/user_histories.yml
+++ b/test/fixtures/user_histories.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  history_id: 
-  user_id: 
+  history_id: 123987
+  user_id: 124897
 
 two:
-  history_id: 
-  user_id: 
+  history_id: 897123 
+  user_id: 567234
