--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: user1
   password_digest: <%= BCrypt::Password.create('secret') %>
-  role: MyString
+  role: Writer
 
 two:
-  name: MyString
+  name: user2
   password_digest: <%= BCrypt::Password.create('secret') %>
-  role: MyString
+  role: Manager
