deleted the coffee javascript files, added testing for task and user oppty controller, got rid of routes

--- a/test/fixtures/oppties.yml
+++ b/test/fixtures/oppties.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+oppty1:
   opptyId: AAUIA-ZVT6N
   opptyName: AIR 4.0M support for warfare analysis and M&S
   slDir: changed1
