--- a/test/fixtures/user_oppties.yml
+++ b/test/fixtures/user_oppties.yml
@@ -1,9 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+userOppty1:
   oppty_id: 4587	
-  user_id: 1678	
-
-two:
-  oppty_id: 777887	
-  user_id: 123659
+  user_id: 1678
+  status: 1
